[package]
name = "wifi_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
pnet = "0.35.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
